Remove Go from CI matrix - templates not yet implemented
Go language support is planned but templates are not yet implemented.
Removed 'go' from the CI matrix to prevent build failures.

The templates/mcp-go/ directory exists but is empty, and attempting to
generate Go code results in:
'Template directory templates/mcp-go does not exist.'

Go support will be added in a future phase once templates are developed.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
     needs: validate
     strategy:
       matrix:
-        language: [csharp, python, typescript, go]
+        language: [csharp, python, typescript]
 
     steps:
       - name: Checkout code
