--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,11 +56,18 @@ jobs:
       - name: Generate ${{ matrix.language }} code
         run: ./generate-mcp-all.sh --languages=${{ matrix.language }}
 
+      - name: Copy generated code for artifact upload
+        run: |
+          mkdir -p ./artifacts
+          if [ -d "../generated/${{ matrix.language }}-mcp" ]; then
+            cp -r ../generated/${{ matrix.language }}-mcp ./artifacts/
+          fi
+
       - name: Upload generated code
         uses: actions/upload-artifact@v4
         with:
           name: generated-${{ matrix.language }}
-          path: ../generated/${{ matrix.language }}-mcp/
+          path: ./artifacts/${{ matrix.language }}-mcp/
           retention-days: 7
 
   test-python:
