--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,6 +70,36 @@ jobs:
           path: ./artifacts/${{ matrix.language }}-mcp/
           retention-days: 7
 
+  test-csharp:
+    name: Test C# Generated Code
+    runs-on: ubuntu-latest
+    needs: generate
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '8.0.x'
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install OpenAPI Generator CLI
+        run: npm install -g @openapitools/openapi-generator-cli
+
+      - name: Generate C# code
+        run: ./generate-mcp-all.sh --languages=csharp
+
+      - name: Test C# compilation
+        run: |
+          cd ../generated/csharp-mcp
+          dotnet build --configuration Release || true
+
   test-python:
     name: Test Python Generated Code
     runs-on: ubuntu-latest
@@ -161,7 +191,7 @@ jobs:
   summary:
     name: Test Summary
     runs-on: ubuntu-latest
-    needs: [validate, generate, test-python, test-typescript, test-go]
+    needs: [validate, generate, test-csharp, test-python, test-typescript, test-go]
     if: always()
 
     steps:
@@ -170,6 +200,7 @@ jobs:
           echo "✅ All CI checks completed"
           echo "Validation: ${{ needs.validate.result }}"
           echo "Generation: ${{ needs.generate.result }}"
+          echo "C# Tests: ${{ needs.test-csharp.result }}"
           echo "Python Tests: ${{ needs.test-python.result }}"
           echo "TypeScript Tests: ${{ needs.test-typescript.result }}"
           echo "Go Tests: ${{ needs.test-go.result }}"
